--- a/style.css
+++ b/style.css
@@ -1,7 +1,46 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap');
 
 :root {
-    --bg-color: #6439FF;
-    --primary-color: #8967B3;
-    --secundary-color: #CB80AB;
+    --bg-color: #000000;
+    --primary-color: #ff00d4;
+    --secundary-color: #945252;
+    --font: "Afacad Flux", sans-serif;
 }
+body{
+    background-color: var(--bg-color);
+    color: var(--primary-color);
+    font-family: var(--font);
+    height: 100vh;
+    margin: 0;
+}
+header{
+    background-color: var(--primary-color);
+    text-align: center;
+    padding: 1px;
+    }
+    h1{
+        font-size: 3rem;
+        color: var(--bg-color);
+        font-weight: 700;
+    }
+    nav a{
+        text-decoration: none;
+        color: var(--bg-color);
+        margin: 0rem 2rem 3rem 0rem;
+        font-size: 2rem;
+    }
+    nav a:hover{
+        text-decoration: underline;
+        transform: scale(0.90);
+        transition: transform 0.1s;
+    }
+    footer{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: var(--primary-color);
+        color: var(--bg-color);
+        width: 100%;
+        height: 3rem;
+        margin-top: 2rem;
+    }
